--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,14 +178,14 @@ nav {
 }
 
 .bg-logo {
-  height: 400px;
+  height: 450px;
   position: absolute;
   z-index: 1;
   transform: rotate(336deg) translateY(-58%);
-  opacity: 0.1;
+  opacity: 0.07;
   width: fit-content;
   top: 50%;
-  left: 130px;
+  left: 150px;
 }
 
 .hero-heading {
@@ -261,10 +261,10 @@ nav {
 
 .hero-gradient {
   background-image: linear-gradient(120deg, #ffffff 64%, #ffffff1f);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
 
 .about-image {
@@ -375,7 +375,12 @@ nav {
 }
 
 .hire a {
+  transition: 0.3s ease-in-out;
   color: inherit;
+}
+
+.hire a:hover {
+  color: #ffffff;
 }
 
 /* foooter csss */
@@ -609,7 +614,7 @@ nav {
 }
 
 .cp-3 {
-  margin-bottom: 100px;
+  margin-bottom: 86px;
 }
 
 .card-para {
@@ -690,25 +695,42 @@ nav {
   text-align: center;
   padding: 15px 0;
   border-radius: 10px;
+  transition: 0.3s ease-in-out;
 }
 
 .orange {
+  border: 1px solid #ff9900;
   background-color: #FF9900;
   margin-bottom: 10px;
 }
 
+.orange:hover{
+  background-color: #ffffff;
+  color: #FF9900;
+}
+
 .purple {
+  border: 1px solid #3F348F;
   background-color: #3F348F;
   margin-bottom: 10px;
 }
 
+.purple:hover{
+  color: #3F348F;
+  background-color: #ffffff;
+}
 .custom {
   margin-bottom: 70px;
 }
 
 .green {
+  border: 1px solid #38B445;
   background-color: #38B445;
   margin-bottom: 10px;
+}
+.green:hover{
+  color: #38B445;
+  background-color: #ffffff;
 }
 
 .chevron-ser {
@@ -827,6 +849,22 @@ nav {
   width: 100%;
 }
 
+@media (min-width: 992px) {
+  .pic-height{
+    object-fit: unset;
+  }
+
+}
+@media (max-width: 1400px) {
+
+  .image{
+    height: 390px;
+  }
+  .cp-3 {
+    margin-bottom: 105px;
+  }
+}
+
 @media (max-width:1200px) {
 
   .cp-3 {
@@ -834,7 +872,7 @@ nav {
   }
 
   .image {
-    height: 400px;
+    height: 330px;
   }
 
   .brands {
@@ -912,8 +950,12 @@ nav {
 }
 
 @media (max-width:992px) {
+  .cp-2 {
+    margin-bottom: 22px;
+  }
+
   .image {
-    height: 350px;
+    height: auto;
   }
 
   .brands {
@@ -1016,7 +1058,7 @@ nav {
   }
 
   .image {
-    height: 300px;
+    height: auto;
   }
 
   .brands {
@@ -1110,7 +1152,7 @@ nav {
   }
 
   .image {
-    height: 25 0px;
+    height: auto;
   }
 
   .active-design {
